Fix text overflow on multiple places relates to xibosignage/xibo#3328
 - Viewer bottom bar
 - Widget in Playlist view
 - External Playlist editor header

--- a/ui/src/style/bottombar.scss
+++ b/ui/src/style/bottombar.scss
@@ -99,6 +99,14 @@
 
                 .label-name {
                     line-height: 1;
+                    display: flex;
+                    gap: 8px;
+
+                    & > .name {
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
                 }
             }
 
